--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,12 @@ keywords = ["OpenAI", "API", "Rust", "library", "SDK", "AI"]
 categories = ["api-bindings", "web-programming"]
 
 [dependencies]
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.121"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
+dotenv = "0.15"
+
 
 [lib]
 name = "open_ai_rust"
