--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "open_ai_rust"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Lachy Hislop <lachie.hislop@gmail.com>"]
 description = "Open AI SDK for Rust. To my knowledge, the only fully comprehensive and up-to-date Open AI crate built in and for Rust. Provides both low-level control with high level ergonomics for doing cool things (the whole reason we use Rust in the first place). Is maintained and has been used and tested in products used in production."
@@ -17,6 +17,9 @@ serde_json = "1.0.121"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }
 dotenv = "0.15"
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "1.0", features = ["full"] }
 
 [lib]
 name = "open_ai_rust"
