--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,7 @@ serde_json = "1.0.121"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }
 dotenv = "0.15"
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = { version = "1.0", features = ["full"] }
+open_ai_rust_fn_call_extension="0.1.4"
 
 [lib]
 name = "open_ai_rust"
